--- a/src/chatredes/Chat.properties
+++ b/src/chatredes/Chat.properties
@@ -1,11 +1,11 @@
 # To change this license header, choose License Headers in Project Properties.
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
-prop.server.ip = 127.0.0.1
-prop.server.port.tcp = 5000
-prop.server.port.tcpf = 5001
-prop.server.port.udp = 5002
-prop.server.port.mcast = 5003
+chat.server.ip = 127.0.0.1
+chat.server.port.tcp = 5000
+chat.server.port.tcpf = 5001
+chat.server.port.udp = 5002
+chat.server.port.mcast = 5003
 
 
  
