Mais estruturação do código

--- a/src/config/Chat.properties
+++ b/src/config/Chat.properties
@@ -2,10 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 chat.server.ip = 127.0.0.1
-chat.server.port.tcp = 5000
-chat.server.port.tcpf = 5001
-chat.server.port.udp = 5002
-chat.server.port.mcast = 5003
+chat.port.tcp = 5000
+chat.port.udp = 5001
+chat.port.mcast = 5002
 
 
  
