tratamento dos protocolos em threads separadas.

--- a/src/config/Chat.properties
+++ b/src/config/Chat.properties
@@ -4,7 +4,8 @@
 chat.server.ip = 127.0.0.1
 chat.port.tcp = 5000
 chat.port.udp = 5001
-chat.port.mcast = 5002
+chat.port.mcast = 6868
+chat.message.max_length = 1024
 
 
  
