só falta a transferência do arquivo.

--- a/src/config/Chat.properties
+++ b/src/config/Chat.properties
@@ -2,8 +2,9 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 chat.server.ip = 127.0.0.1
-chat.port.tcp = 5000
-chat.port.udp = 5001
+chat.port.tcp1 = 5000
+chat.port.tcp2 = 5001
+chat.port.udp = 5002
 chat.port.mcast = 6868
 chat.message.max_length = 1024
 
